unpackaged/main/default/objects/Case/fields/Accounting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Comments__c</fullName>
    <label>Accounting Comments</label>
    <type>TextArea</type>
</CustomField>