unpackaged/main/default/objects/Case/fields/Adjusted_Remittance__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Remittance__c</fullName>
    <description>manual field for now, will change to formula upon research to pull data from payment agreement</description>
    <label>Adjusted Remittance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>