unpackaged/main/default/objects/Case/fields/Affidavit_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Affidavit_Received_Date__c</fullName>
    <label>Affidavit Received Date</label>
    <type>Date</type>
</CustomField>