unpackaged/main/default/objects/Case/fields/Avg_Monthly_Deposits_at_Funding__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Deposits_at_Funding__c</fullName>
    <formula>Contract__r.Avg_Monthly_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Monthly Deposits at Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>