unpackaged/main/default/objects/Case/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <formula>Opportunity__r.Balance_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>