unpackaged/main/default/objects/Case/fields/Bank_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_2_Name__c</fullName>
    <formula>Opportunity__r.Bank_2_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank 2 Name</label>
    <type>Text</type>
</CustomField>