unpackaged/main/default/objects/Case/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <formula>Opportunity__r.Bank_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Number</label>
    <type>Text</type>
</CustomField>