unpackaged/main/default/objects/Case/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <formula>Opportunity__r.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>