unpackaged/main/default/objects/Case/fields/BBB_Review__c.field-meta.xml
<CustomField>
    <fullName>BBB_Review__c</fullName>
    <description>Broker Management</description>
    <label>BBB Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Found Acceptable</fullName>
            </value>
            <value>
                <fullName>Found Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>