unpackaged/main/default/objects/Case/fields/Breach__c.field-meta.xml
<CustomField>
    <fullName>Breach__c</fullName>
    <label>Breach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop Pay</fullName>
            </value>
            <value>
                <fullName>Failure to provide Banks</fullName>
            </value>
            <value>
                <fullName>Layers</fullName>
            </value>
            <value>
                <fullName>Sells assets</fullName>
            </value>
            <value>
                <fullName>Redirects deposits</fullName>
            </value>
            <value>
                <fullName>Fails to give new account info</fullName>
            </value>
            <value>
                <fullName>Obstruction</fullName>
            </value>
            <value>
                <fullName>Personal Use of Funds</fullName>
            </value>
            <value>
                <fullName>False information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>