unpackaged/main/default/objects/Case/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <formula>Opportunity__r.Broker_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker</label>
    <type>Text</type>
</CustomField>