unpackaged/main/default/objects/Case/fields/CA_Lender_s_License__c.field-meta.xml
<CustomField>
    <fullName>CA_Lender_s_License__c</fullName>
    <label>CA Lender's License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>