unpackaged/main/default/objects/Case/fields/Case_Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Creator_Email__c</fullName>
    <formula>IF(SuppliedEmail = '', CreatedBy.Email, SuppliedEmail)</formula>
    <label>Case Creator Email</label>
    <type>Text</type>
</CustomField>