unpackaged/main/default/objects/Case/fields/Charge_Off_Drip_Status__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Drip_Status__c</fullName>
    <label>Charge Off Drip Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>