unpackaged/main/default/objects/Case/fields/Chargeoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Notes__c</fullName>
    <formula>Account.Chargeoff_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeoff Notes</label>
    <type>Text</type>
</CustomField>