unpackaged/main/default/objects/Case/fields/Chargeoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Status__c</fullName>
    <formula>TEXT( Account.Chargeoff_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeoff Status</label>
    <type>Text</type>
</CustomField>