unpackaged/main/default/objects/Case/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <inlineHelpText>If the Case type is Check Request, this field will be required to fill out before the Case can be closed.</inlineHelpText>
    <label>Check Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>