unpackaged/main/default/objects/Case/fields/Collection_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Engagement_Status__c</fullName>
    <description>reference same field on the account (PD-1185)</description>
    <formula>TEXT(Account.Collections_Engagement_Status__c )</formula>
    <inlineHelpText>value from related Account</inlineHelpText>
    <label>Collection Engagement Status</label>
    <type>Text</type>
</CustomField>