unpackaged/main/default/objects/Case/fields/Collections_Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_Next_Activity_Date__c</fullName>
    <description>reference same field on related Account (pd-1185)</description>
    <formula>Account.Collections_Next_Activity_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>value from related Account</inlineHelpText>
    <label>Collections Next Activity Date</label>
    <type>Date</type>
</CustomField>