unpackaged/main/default/objects/Case/fields/Collections_Stage__c.field-meta.xml
<CustomField>
    <fullName>Collections_Stage__c</fullName>
    <formula>TEXT(Account.Collections_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections Stage</label>
    <type>Text</type>
</CustomField>