unpackaged/main/default/objects/Case/fields/Collections_Status_Account__c.field-meta.xml
<CustomField>
    <fullName>Collections_Status_Account__c</fullName>
    <formula>TEXT(Account.Collections_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections Status</label>
    <type>Text</type>
</CustomField>