unpackaged/main/default/objects/Case/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <formula>Account.Collector__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>