unpackaged/main/default/objects/Case/fields/Comprehensive_Person_Search_PG1__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Person_Search_PG1__c</fullName>
    <label>Comprehensive Person Search - PG1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>