unpackaged/main/default/objects/Case/fields/Concurrent_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Loan_Number__c</fullName>
    <label>Concurrent Loan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>