unpackaged/main/default/objects/Case/fields/Creator_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Creator_is_Current_User__c</fullName>
    <formula>IF(Case_Creator_Email__c = $User.Email, 'True', 'False')</formula>
    <label>Creator is Current User</label>
    <type>Text</type>
</CustomField>