unpackaged/main/default/objects/Case/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <description>Displays current month</description>
    <formula>CASE(
MONTH(DATEVALUE(NOW())),
1, "January",
2, "February",
3, "March",
4, "April",
5, "May",
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"None")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Text</type>
</CustomField>