unpackaged/main/default/objects/Case/fields/Customer_Service_Phone_Number_for_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone_Number_for_Bounce__c</fullName>
    <description>PD-1472</description>
    <formula>$Setup.Case_Email_Merge_Fields__c.Customer_Service_Phone_Number_for_Bounce__c</formula>
    <label>Customer Service Phone Number for Bounce</label>
    <type>Text</type>
</CustomField>