unpackaged/main/default/objects/Case/fields/Date_of_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Bounce__c</fullName>
    <label>Date of Bounce</label>
    <type>Date</type>
</CustomField>