unpackaged/main/default/objects/Case/fields/Email_Signature_Company__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature_Company__c</fullName>
    <formula>IF(
Originating_Lender_formula__c = 'Quick Bridge Funding', 
'National Funding, Inc., the parent and servicing company of' &amp; BR() &amp; 'Quick Bridge Funding, LLC',
'National Funding'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Signature Company</label>
    <type>Text</type>
</CustomField>