unpackaged/main/default/objects/Case/fields/Email_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Website_Address__c</fullName>
    <formula>IF(
Originating_Lender_formula__c = 'Quick Bridge Funding',
HYPERLINK("https://www.quickbridge.com/covid-19-funding-resources-mod/","https://www.quickbridge.com/covid-19-funding-resources-mod/"),
HYPERLINK("https://www.nationalfunding.com/SBAloans","https://www.nationalfunding.com/SBAloans")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Website Address</label>
    <type>Text</type>
</CustomField>