unpackaged/main/default/objects/Case/fields/Estimated_Payments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payments_Remaining__c</fullName>
    <formula>IF(
	Opportunity__r.Balance_Remaining__c /  Opportunity__r.Actual_Daily_Payment__c &lt; 0,
	0,
	CEILING(Opportunity__r.Balance_Remaining__c /  Opportunity__r.Actual_Daily_Payment__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>