unpackaged/main/default/objects/Case/fields/Expected_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Renewal_Date__c</fullName>
    <formula>Opportunity__r.Expected_Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Renewal Date</label>
    <type>Date</type>
</CustomField>