unpackaged/main/default/objects/Case/fields/Fraud_Status__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Status__c</fullName>
    <label>Fraud Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affidavit Sent</fullName>
            </value>
            <value>
                <fullName>Investigation Pending</fullName>
            </value>
            <value>
                <fullName>Closed - Invalid Fraud</fullName>
            </value>
            <value>
                <fullName>Closed - Valid Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>