unpackaged/main/default/objects/Case/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <formula>Opportunity__r.ACTUAL_AMT_OFFERED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>