unpackaged/main/default/objects/Case/fields/Good_Through__c.field-meta.xml
<CustomField>
    <fullName>Good_Through__c</fullName>
    <label>Good Through</label>
    <type>Date</type>
</CustomField>