unpackaged/main/default/objects/Case/fields/Last_Email_Drip_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Drip_Sent_DateTime__c</fullName>
    <description>Stores the date and time when the most recent email in the drip sequence was sent. Used to track email cadence and control timing of subsequent emails. Currently only used for NCCI email drip, but can be scaled further.</description>
    <inlineHelpText>The date and time when the most recent email in the drip campaign was sent.</inlineHelpText>
    <label>Last Email Drip Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>