unpackaged/main/default/objects/Case/fields/Lease_Plus_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Plus_Number__c</fullName>
    <formula>Account.LP_Cust_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Plus Number</label>
    <type>Text</type>
</CustomField>