unpackaged/main/default/objects/Case/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <formula>Opportunity__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>