unpackaged/main/default/objects/Case/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <formula>Opportunity__r.Lender_Account__c</formula>
    <label>Lender Account</label>
    <type>Text</type>
</CustomField>