unpackaged/main/default/objects/Case/fields/Loan_Mod_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Loan_Mod_Expiration__c</fullName>
    <label>Loan Mod Expiration</label>
    <type>Date</type>
</CustomField>