unpackaged/main/default/objects/Case/fields/LP_Loan__c.field-meta.xml
<CustomField>
    <fullName>LP_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LP Loan</label>
    <referenceTo>LP_Loan__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>