unpackaged/main/default/objects/Case/fields/Lump_Sum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Amount__c</fullName>
    <label>Lump Sum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>