unpackaged/main/default/objects/Case/fields/Lump_Sum_Due__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Due__c</fullName>
    <label>Lump Sum Due</label>
    <type>Date</type>
</CustomField>