unpackaged/main/default/objects/Case/fields/Merchant_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number__c</fullName>
    <description>Identifies the Agreement Number for the product.</description>
    <label>Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>