unpackaged/main/default/objects/Case/fields/MLP_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>MLP_Loan_Number__c</fullName>
    <label>MLP Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>