unpackaged/main/default/objects/Case/fields/MLP_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>MLP_Payoff_Amount__c</fullName>
    <label>MLP Payoff Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>