unpackaged/main/default/objects/Case/fields/MLP_Payoff_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>MLP_Payoff_Amount_Text__c</fullName>
    <description>The purpose of this field is to only duplicate the value of the MLP_Payoff_Amount___c [currency] field and make the amount searchable for end users. The value is being set by a flow.</description>
    <label>MLP Payoff Amount Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>