unpackaged/main/default/objects/Case/fields/Mod_Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Mod_Extension_Fee__c</fullName>
    <label>Mod Extension Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>