unpackaged/main/default/objects/Case/fields/Mod_Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>Mod_Extension_Months__c</fullName>
    <label>Mod Extension Months</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>