unpackaged/main/default/objects/Case/fields/Mod_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Mod_Frequency__c</fullName>
    <label>Mod Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
                <isActive>false</isActive>
                <label>Biweekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>