unpackaged/main/default/objects/Case/fields/Mod_Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Mod_Number_of_Payments__c</fullName>
    <label>Mod Number of Payments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>