unpackaged/main/default/objects/Case/fields/NCCI_Sent__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Sent__c</fullName>
    <label>NCCI Sent</label>
    <type>Date</type>
</CustomField>