unpackaged/main/default/objects/Case/fields/New_Chargeoff_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Chargeoff_Status__c</fullName>
    <label>New Chargeoff Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chargeoff_Status</valueSetName>
    </valueSet>
</CustomField>