unpackaged/main/default/objects/Case/fields/New_Collections_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Collections_Stage__c</fullName>
    <label>New Collections Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Rerun</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
            <value>
                <fullName>Bank Change</fullName>
            </value>
            <value>
                <fullName>MOD</fullName>
            </value>
            <value>
                <fullName>Catchup</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Running Past Maturity</fullName>
            </value>
            <value>
                <fullName>RECON</fullName>
            </value>
            <value>
                <fullName>FRPSA- Charge Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>