unpackaged/main/default/objects/Case/fields/New_Collections_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Collections_Status__c</fullName>
    <label>New Collections Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Bouncing</fullName>
            </value>
            <value>
                <fullName>Catchup needed</fullName>
            </value>
            <value>
                <fullName>Catchup scheduled</fullName>
            </value>
            <value>
                <fullName>Chargeoff</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>LGL DMD Out</fullName>
            </value>
            <value>
                <fullName>Mod Approved</fullName>
            </value>
            <value>
                <fullName>Mod Pending</fullName>
            </value>
            <value>
                <fullName>PERM MOD</fullName>
            </value>
            <value>
                <fullName>NCCI</fullName>
            </value>
            <value>
                <fullName>Pending Updated Info</fullName>
            </value>
            <value>
                <fullName>Rerun</fullName>
            </value>
            <value>
                <fullName>Running Past Maturity</fullName>
            </value>
            <value>
                <fullName>Yodlee Completed</fullName>
            </value>
            <value>
                <fullName>Yodlee Sent</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Recon Pending</fullName>
            </value>
            <value>
                <fullName>Recon Approved</fullName>
            </value>
            <value>
                <fullName>Recon Retracted</fullName>
            </value>
            <value>
                <fullName>FRPSA-Breach</fullName>
            </value>
            <value>
                <fullName>FRPSA-Terminate</fullName>
            </value>
            <value>
                <fullName>FRPSA- Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>