unpackaged/main/default/objects/Case/fields/New_Sum_Note__c.field-meta.xml
<CustomField>
    <fullName>New_Sum_Note__c</fullName>
    <label>New Sum Note</label>
    <type>TextArea</type>
</CustomField>