unpackaged/main/default/objects/Case/fields/Next_Broker_Refresh_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Broker_Refresh_Due__c</fullName>
    <label>Next Broker Refresh Due</label>
    <type>Date</type>
</CustomField>