unpackaged/main/default/objects/Case/fields/Number_of_Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact_Roles__c</fullName>
    <label>Number of Contact Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>