unpackaged/main/default/objects/Case/fields/OFAC_Business__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Business__c</fullName>
    <label>OFAC - Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>