unpackaged/main/default/objects/Case/fields/OFAC_PG2__c.field-meta.xml
<CustomField>
    <fullName>OFAC_PG2__c</fullName>
    <label>OFAC - PG2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>