unpackaged/main/default/objects/Case/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Additional field for Collections Status. Must be filled out if Collections Status = Other.</description>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>