unpackaged/main/default/objects/Case/fields/Payments_Behind__c.field-meta.xml
<CustomField>
    <fullName>Payments_Behind__c</fullName>
    <formula>Opportunity__r.Payments_Behind__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Behind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>