unpackaged/main/default/objects/Case/fields/Payoff_Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Amount_Text__c</fullName>
    <description>The purpose of this field is to only duplicate the value of the Payoff_Amount__c [currency] field and make the amount searchable for end users. The value is being set by a flow.</description>
    <label>Payoff Amount Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>