unpackaged/main/default/objects/Case/fields/Payoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Notes__c</fullName>
    <label>Payoff Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>