unpackaged/main/default/objects/Case/fields/Pending_Chargeoff__c.field-meta.xml
<CustomField>
    <fullName>Pending_Chargeoff__c</fullName>
    <formula>TEXT( Account.Pending_Chargeoff__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Chargeoff</label>
    <type>Text</type>
</CustomField>