unpackaged/main/default/objects/Case/fields/Phone_Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Verified__c</fullName>
    <description>Broker Management</description>
    <label>Phone Number Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>