unpackaged/main/default/objects/Case/fields/Physical_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Verified__c</fullName>
    <description>Broker Management</description>
    <label>Physical Address Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>